--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
     <div class="container-fluid  text-xl-left  navbackground">
 		<div class="row text-white">
 			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-4">
-				<h4>Construmetal:</h4>
-				<p>commodi ex aliquid doloremque quod. Cumque, molestiae. Perferendis dolor eligendi ratione a. Eveniet illo ab repellat error quasi.</p>
+				<h1>Horario de atencion:</h1>
+				<h2>Lunes - Viernes <br> 8:00 AM a 4:00 PM</h2>
 			</div>
 
 			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-4">
@@ -181,7 +181,7 @@
 				<p><span class="fas fa-map-marker-alt"></span> 4° calle poniente #603 B. San Felipe</p>
 				<p><span class="fas fa-phone"></span> 2635-2424</p> 
 				<p><span class="fas fa-envelope"></span> construmetalsv@yahoo.com</p>
-				<p><span class="fab fa-facebook-square"></span> Construmetal</p>
+				<p><a href="https://www.facebook.com/ConstrumetalSM/photos/?ref=page_internal" target="_blank" rel="noopener noreferrer"><span class="fab fa-facebook-square text-white"></span></a> Construmetal</p>
 			</div>
 		</div>
 		<!-- Copyright -->
